Apache Http ClientからHttpURLConnectionに移行